--- a/FilterCatalogSpa/src/app/shared/main-layout/main-layout.component.html
+++ b/FilterCatalogSpa/src/app/shared/main-layout/main-layout.component.html
@@ -1,14 +1,12 @@
 <div class="container">
-    <div class="header">
-        <div class="logo">
+    <div flex fxLayout="row">
+        <div fxFlex="20">
+            <img src="../../../assets\images\logo.jpg" class="logo">
         </div>
-
-        <div class="menu">
-
-        </div>
+        <div fxFlex="40" ></div>
+        <div fxFlex="40" style="background-color: green;"></div>
     </div>
-
-    <div class="content" >
+    <div class="content">
         <router-outlet></router-outlet>
     </div>
 </div>
