--- a/FilterCatalogSpa/src/app/shared/main-layout/main-layout.component.scss
+++ b/FilterCatalogSpa/src/app/shared/main-layout/main-layout.component.scss
@@ -5,28 +5,27 @@
   height: 800px;
 }
 .logo {
-    
-  width: 200px;
-  height: 100px;
-  background: url(../../../assets\images\logo.jpg);
+  width: 100%;
+  height: 150px;
   background-size: 100%;
   float: left;
 }
 
 .menu {
- 
   width: 500px;
   height: 100px;
   float: right;
   background-color: blue;
 }
 
-.header {
- 
+.headers {
   width: 100%;
+  float: left;
 }
 
 .content {
-background-color: brown;
+  background-color: brown;
   width: 100%;
+  float: left;
+  height: 400px;
 }
